--- a/index.html
+++ b/index.html
@@ -5,15 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
 <body>
     <!-- header start -->
     <header>
-
+        <section class="nav_banner-container">
+            <nav class="nave_title">
+                <div class="logo_title">
+                    <img src="./Images/sitelogo.png" alt="">
+                    <h3>Green <span class="nav_travel">Travel</span></h3>
+                </div>
+                <div>
+                    <ul class="nav_page">
+                        <li class="option1"><a href=""><span class="option11">Home</span></a></li>
+                        <li class="option"><a href="">Packages</a></li>
+                        <li class="option"><a href="">Testimonial</a></li>
+                        <li class="option"><a href="">Blog</a></li>
+                        <li class="option"><a href="">Contact</a></li>
+                        <li><a href="nav_option"><i class="fa-solid fa-bars"></i></a></li>
+                    </ul>
+                </div>
+            </nav>
+        </section>
+        <!-- banner section start -->
+        <section class="banner_content ">
+            <div class="banner_area">
+                <div class="banner_text">
+                    <h1>Explore Your Travel</h1>
+                    <p>The Best price to travel on worldwide.</p>
+                </div>
+                <div class="banner_input">
+                    <input class="input_field" placeholder="Where go" type="text">
+                    <select  class="input_field">
+                        <option >When</option>
+                        <option value="17march">15 March</option>
+                        <option value="18march">20 March</option>
+                        <option value="19march">25 March</option>
+                    </select>
+                    <select class="input_field">
+                        <option>Select Type</option>
+                        <option value="airplane">Airplane</option>
+                        <option value="bus">Bus</option>
+                        <option value="train">Train</option>
+                        <option value="boat">Boat</option>
+                    </select>
+                    <button class="pm_button">
+                        <a href=""><i class="fa-solid fa-magnifying-glass"></i> Find Now</a>
+                    </button>
+                </div>
+            </div>
+        </section>
     </header>
     <!-- main section start -->
     <main>
-
+        <section class="popularTours">
+            <div>
+                <h1>Our Popular Tours</h1>
+                <p> We prioritize safety and comfort, providing a secure and enjoyable environment throughout your tour.</p>
+                <ul>
+                    <li type="square">Is The Bridge Under Which The Rupsa River Flows. Bharata Bhayana Is An Archaeological Site Which Was The Palace Of Emperor Raja Bharata Which Is Situated At Keshabpur Of Jessore Which Is Nearby Khulna City.</li>
+                    <li type="square">Srimangal is a small town nestled in Bangladesh lush green tea plantations This beutiful destination, also  known as the tea captial of the country</li>
+                    <li type="square">Cox's Bazar  Green with Travel. Pristine beaches, vibrant culture, and unforgettable experiences await.</li>
+                </ul>
+                <p>Although the Sun appears to “rise” from the horizon, it is actually the Earth’s motion that causes the Sun to appear. The illusion of a moving Sun results from Earth observers being....</p>
+                <button class=".pm_button">
+                    <a href="">Read More</a>
+                </button>
+            </div>
+        </section>
     </main>
     <!-- footer section start -->
     <footer>
