--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
+
 <body>
     <!-- header start -->
     <header>
@@ -38,8 +40,8 @@
                 </div>
                 <div class="banner_input">
                     <input class="input_field" placeholder="Where go" type="text">
-                    <select  class="input_field">
-                        <option >When</option>
+                    <select class="input_field">
+                        <option>When</option>
                         <option value="17march">15 March</option>
                         <option value="18march">20 March</option>
                         <option value="19march">25 March</option>
@@ -60,25 +62,112 @@
     </header>
     <!-- main section start -->
     <main>
-        <section class="popularTours">
-            <div>
+        <section class="popularTours-container">
+            <div class="popularTours">
+               <div class="tours-text">
                 <h1>Our Popular Tours</h1>
-                <p> We prioritize safety and comfort, providing a secure and enjoyable environment throughout your tour.</p>
+                <p> We prioritize safety and comfort, providing a secure and enjoyable environment throughout your tour.
+                </p>
                 <ul>
-                    <li type="square">Is The Bridge Under Which The Rupsa River Flows. Bharata Bhayana Is An Archaeological Site Which Was The Palace Of Emperor Raja Bharata Which Is Situated At Keshabpur Of Jessore Which Is Nearby Khulna City.</li>
-                    <li type="square">Srimangal is a small town nestled in Bangladesh lush green tea plantations This beutiful destination, also  known as the tea captial of the country</li>
-                    <li type="square">Cox's Bazar  Green with Travel. Pristine beaches, vibrant culture, and unforgettable experiences await.</li>
+                    <li type="square">Is The Bridge Under Which The Rupsa River Flows. Bharata Bhayana Is An
+                        Archaeological Site Which Was The Palace Of Emperor Raja Bharata Which Is Situated At Keshabpur
+                        Of Jessore Which Is Nearby Khulna City.</li>
+                    <li type="square">Srimangal is a small town nestled in Bangladesh lush green tea plantations This
+                        beutiful destination, also known as the tea captial of the country</li>
+                    <li type="square">Cox's Bazar Green with Travel. Pristine beaches, vibrant culture, and
+                        unforgettable experiences await.</li>
                 </ul>
-                <p>Although the Sun appears to “rise” from the horizon, it is actually the Earth’s motion that causes the Sun to appear. The illusion of a moving Sun results from Earth observers being....</p>
-                <button class=".pm_button">
-                    <a href="">Read More</a>
-                </button>
+                <p>Although the Sun appears to “rise” from the horizon, it is   actually the Earth’s motion that causes
+                    the Sun to appear. The illusion of a moving Sun results from Earth observers being....</p>
+                    <button class="pm_button">
+                        <a href=""> Read More</a>
+                    </button>
+               </div>
+            </div>
+            <div class="popularTours_img">
+                <img src="./Images/Rectangle 4.png">
             </div>
         </section>
+        <!--  Your Destination section start -->
+        <!-- <section>
+            <div class="u_destination-text">
+                <h1>Choose Your Destination</h1>
+                <p>Our travel guides as well as our photos should help you find your next destination.You can find more details at the Moon Travel Angency.</p>
+            </div>
+            <div class="image_area">
+                <div class="maldiv imaegec">
+                    <h5>Maldives</h5>
+                    <img src="images/Rectangle 5.png" alt="">
+                </div>
+                <div class="indonesia imaegec">
+                    <h5>Indonesia</h5>
+                    <img src="images/Rectangle 6.png" alt="">
+                </div>
+                <div class="srilanka imaegec">
+                    <h5>Srilanka</h5>
+                    <img src="images/Rectangle 7.png" alt="">
+                </div>
+                <div class="amerika imaegec">
+                    <h5>North America</h5>
+                    <img src="images/Rectangle 8.png" alt="">
+                </div>
+                <div  class="kasmir imaegec">
+                    <h5>Kashmir</h5>
+                    <img src="images/Rectangle 9.png" alt="">
+                </div>
+                <div class="bd imaegec">
+                    <h5>Bangladesh</h5>
+                    <img src="images/Rectangle 10.png" alt="">
+                </div>
+                <div class="bandarban imaegec">
+                    <h5>Bandarban</h5>
+                    <img src="images/Rectangle 11.png" alt="">
+                </div>
+            </div>
+        </section> -->
+        <section id="iteam" class="nav_banner-container">
+            <div class="iteam-grid">
+                <h1>Best Destination</h1>
+                <p>.Our travel guides as well as our photos should help you find your next destination.You can find more details at the Moon Travel Angency.</p>
+            </div>
+            <div class="image-area">
+                <div id="immages" class="maldiv">
+                    <h4>Maldives</h4>
+                    <img src="images/Rectangle 5.png" alt="">
+                </div>
+                <div id="immages" class="indonesia">
+                    <h4>Indonesia</h4>
+                    <img src="images/Rectangle 8.png" alt="">
+                </div>
+                <div id="immages" class="srilanka">
+                    <h4>Srilanka</h4>
+                    <img src="images/Rectangle 6.png" alt="">
+                </div>
+                <div id="immages" class="amerika">
+                    <h4>North America</h4>
+                    <img src="images/Rectangle 7.png" alt="">
+                </div>
+                <div id="immages" class="kasmir">
+                    <h4>Kashmir</h4>
+                    <img src="images/Rectangle 9.png" alt="">
+                </div>
+                <div id="immages" class="bd">
+                    <h4>Bangladesh</h4>
+                    <img src="images/Rectangle 11.png" alt="">
+                </div>
+                <div id="immages" class="bandarban">
+                    <h4>Bandarban</h4>
+                    <img src="images/Rectangle 10.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!--  Your Destination section end -->
+
     </main>
     <!-- footer section start -->
     <footer>
 
     </footer>
 </body>
+
 </html>
