--- a/index.html
+++ b/index.html
@@ -162,6 +162,32 @@
             </div>
         </section>
         <!--  Your Destination section end -->
+        <!-- why choose us section start -->
+        <section class="nav_banner-container">
+            <div class="chooseText">
+                <h1>Why Choose Us</h1>
+                <p>we have the best prices for tours, and a huge selection of destinations will not leave indifferent even avid tourist.</p>
+            </div>
+            <div class="icon-grid">
+                <div id="iconcard" class="iconcrad1">
+                    <img src="images/hotelicon1.png" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div id="iconcard" class="iconcrad2">
+                    <img src="images/mapicon1.png" alt="">
+                    <h3>World Class Service</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+    
+                </div>
+                <div id="iconcard" class="iconcrad3">
+                    <img src="images/pricetagicon1.png" alt="">
+                    <h3>Best Price Guarantee</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+        </section>
+        <!-- whhy choose us section end -->
 
     </main>
     <!-- footer section start -->
