--- a/index.html
+++ b/index.html
@@ -188,6 +188,66 @@
             </div>
         </section>
         <!-- whhy choose us section end -->
+        <!-- Deals & Discounts section start -->
+        <section id="deals-id" class="nav_banner-container">
+            <div class="deals_text">
+                <h1>Deals & Discounts</h1>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="discount-bg1"> 
+                <div id="all_text" class="discount-text1">
+                    <div class="p_text">
+                        <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+                        <p><i class="fa-solid fa-people-group"></i> Max : 10</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
+                    </div>
+                    <h2>Tour To Satorini</h2>
+                    <p>Amet consectetur. Vulputate commodo felis 
+                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <h4>Price: $1300-$1500</h4>
+                    <button class="pm_button">
+                        <a href="">Book Now</a>
+                    </button>
+                </div>
+            </div>
+            <div class="discount-bg"> 
+                <div id="all_text" class="discount-text2">
+                    <div class="p_text">
+                        <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+                        <p><i class="fa-solid fa-people-group"></i> Max : 10</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
+                    </div>
+                    <h2>Tour To Satorini</h2>
+                    <p>Amet consectetur. Vulputate commodo felis 
+                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <h4>Price: $1300-$1500</h4>
+                    <button class="pm_button">
+                        <a href="">Book Now</a>
+                    </button>
+                </div>
+            </div>
+            <div class="discount-bg1"> 
+                <div id="all_text" class="discount-text1">
+                    <div class="p_text">
+                        <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+                        <p><i class="fa-solid fa-people-group"></i> Max : 10</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
+                    </div>
+                    <h2>Tour To Satorini</h2>
+                    <p>Amet consectetur. Vulputate commodo felis 
+                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <h4>Price: $1300-$1500</h4>
+                    <button class="pm_button">
+                        <a href="">Book Now</a>
+                    </button>
+                </div>
+            </div>
+            <div class="bttn">
+                <button id="package-btn" class="pm_button">
+                    <a href="">See All Packages</a>
+                </button>
+        </section>
+        <!-- Deals & Discounts section end -->
 
     </main>
     <!-- footer section start -->
