update video section

--- a/index.html
+++ b/index.html
@@ -64,25 +64,29 @@
     <main>
         <section class="popularTours-container">
             <div class="popularTours">
-               <div class="tours-text">
-                <h1>Our Popular Tours</h1>
-                <p> We prioritize safety and comfort, providing a secure and enjoyable environment throughout your tour.
-                </p>
-                <ul>
-                    <li type="square">Is The Bridge Under Which The Rupsa River Flows. Bharata Bhayana Is An
-                        Archaeological Site Which Was The Palace Of Emperor Raja Bharata Which Is Situated At Keshabpur
-                        Of Jessore Which Is Nearby Khulna City.</li>
-                    <li type="square">Srimangal is a small town nestled in Bangladesh lush green tea plantations This
-                        beutiful destination, also known as the tea captial of the country</li>
-                    <li type="square">Cox's Bazar Green with Travel. Pristine beaches, vibrant culture, and
-                        unforgettable experiences await.</li>
-                </ul>
-                <p>Although the Sun appears to “rise” from the horizon, it is   actually the Earth’s motion that causes
-                    the Sun to appear. The illusion of a moving Sun results from Earth observers being....</p>
+                <div class="tours-text">
+                    <h1>Our Popular Tours</h1>
+                    <p> We prioritize safety and comfort, providing a secure and enjoyable environment throughout your
+                        tour.
+                    </p>
+                    <ul>
+                        <li type="square">Is The Bridge Under Which The Rupsa River Flows. Bharata Bhayana Is An
+                            Archaeological Site Which Was The Palace Of Emperor Raja Bharata Which Is Situated At
+                            Keshabpur
+                            Of Jessore Which Is Nearby Khulna City.</li>
+                        <li type="square">Srimangal is a small town nestled in Bangladesh lush green tea plantations
+                            This
+                            beutiful destination, also known as the tea captial of the country</li>
+                        <li type="square">Cox's Bazar Green with Travel. Pristine beaches, vibrant culture, and
+                            unforgettable experiences await.</li>
+                    </ul>
+                    <p>Although the Sun appears to “rise” from the horizon, it is actually the Earth’s motion that
+                        causes
+                        the Sun to appear. The illusion of a moving Sun results from Earth observers being....</p>
                     <button class="pm_button">
                         <a href=""> Read More</a>
                     </button>
-               </div>
+                </div>
             </div>
             <div class="popularTours_img">
                 <img src="./Images/Rectangle 4.png">
@@ -128,7 +132,8 @@
         <section id="iteam" class="nav_banner-container">
             <div class="iteam-grid">
                 <h1>Best Destination</h1>
-                <p>.Our travel guides as well as our photos should help you find your next destination.You can find more details at the Moon Travel Angency.</p>
+                <p>.Our travel guides as well as our photos should help you find your next destination.You can find more
+                    details at the Moon Travel Angency.</p>
             </div>
             <div class="image-area">
                 <div id="immages" class="maldiv">
@@ -166,24 +171,28 @@
         <section class="nav_banner-container">
             <div class="chooseText">
                 <h1>Why Choose Us</h1>
-                <p>we have the best prices for tours, and a huge selection of destinations will not leave indifferent even avid tourist.</p>
+                <p>we have the best prices for tours, and a huge selection of destinations will not leave indifferent
+                    even avid tourist.</p>
             </div>
             <div class="icon-grid">
                 <div id="iconcard" class="iconcrad1">
                     <img src="images/hotelicon1.png" alt="">
                     <h3>Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                 </div>
                 <div id="iconcard" class="iconcrad2">
                     <img src="images/mapicon1.png" alt="">
                     <h3>World Class Service</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
-    
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+
                 </div>
                 <div id="iconcard" class="iconcrad3">
                     <img src="images/pricetagicon1.png" alt="">
                     <h3>Best Price Guarantee</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                 </div>
             </div>
         </section>
@@ -192,9 +201,10 @@
         <section id="deals-id" class="nav_banner-container">
             <div class="deals_text">
                 <h1>Deals & Discounts</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales
+                    dictumst nec nibh pellentesque.</p>
             </div>
-            <div class="discount-bg1"> 
+            <div class="discount-bg1">
                 <div id="all_text" class="discount-text1">
                     <div class="p_text">
                         <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
@@ -202,15 +212,16 @@
                         <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
                     </div>
                     <h2>Tour To Satorini</h2>
-                    <p>Amet consectetur. Vulputate commodo felis 
-                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <p>Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
                     <h4>Price: $1300-$1500</h4>
                     <button class="pm_button">
                         <a href="">Book Now</a>
                     </button>
                 </div>
             </div>
-            <div class="discount-bg"> 
+            <div class="discount-bg">
                 <div id="all_text" class="discount-text2">
                     <div class="p_text">
                         <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
@@ -218,15 +229,16 @@
                         <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
                     </div>
                     <h2>Tour To Satorini</h2>
-                    <p>Amet consectetur. Vulputate commodo felis 
-                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <p>Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
                     <h4>Price: $1300-$1500</h4>
                     <button class="pm_button">
                         <a href="">Book Now</a>
                     </button>
                 </div>
             </div>
-            <div class="discount-bg1"> 
+            <div class="discount-bg1">
                 <div id="all_text" class="discount-text1">
                     <div class="p_text">
                         <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
@@ -234,8 +246,9 @@
                         <p><i class="fa-solid fa-location-dot"></i> Malaysia</p>
                     </div>
                     <h2>Tour To Satorini</h2>
-                    <p>Amet consectetur. Vulputate commodo felis 
-                        molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                    <p>Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
                     <h4>Price: $1300-$1500</h4>
                     <button class="pm_button">
                         <a href="">Book Now</a>
@@ -248,6 +261,32 @@
                 </button>
         </section>
         <!-- Deals & Discounts section end -->
+
+        <!-- perfact place section start -->
+
+        <section class="nav_banner-container">
+            <div class="perfact-pace">
+                <div class="perfact-text">
+                    <h1>A Simple Perfect Place To Get Lost</h1>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. </p>
+                    <ul>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                            suspendisse nullam.</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                            suspendisse nullam.</li>
+                    </ul>
+                    <button id="deals-btn" class="pm_button">
+                        <a href="">See More</a>
+                    </button>
+                </div>
+                <div class="main-video">
+                    <video class="video" controls src="Images/video.mp4"></video>
+                    <h3 class="mountain">Watch Our Mountain in <br> Bangladesh</h3>
+                </div>
+            </div>
+        </section>
+        <!-- perfact place section end -->
 
     </main>
     <!-- footer section start -->
