update some footer

--- a/index.html
+++ b/index.html
@@ -93,42 +93,6 @@
             </div>
         </section>
         <!--  Your Destination section start -->
-        <!-- <section>
-            <div class="u_destination-text">
-                <h1>Choose Your Destination</h1>
-                <p>Our travel guides as well as our photos should help you find your next destination.You can find more details at the Moon Travel Angency.</p>
-            </div>
-            <div class="image_area">
-                <div class="maldiv imaegec">
-                    <h5>Maldives</h5>
-                    <img src="images/Rectangle 5.png" alt="">
-                </div>
-                <div class="indonesia imaegec">
-                    <h5>Indonesia</h5>
-                    <img src="images/Rectangle 6.png" alt="">
-                </div>
-                <div class="srilanka imaegec">
-                    <h5>Srilanka</h5>
-                    <img src="images/Rectangle 7.png" alt="">
-                </div>
-                <div class="amerika imaegec">
-                    <h5>North America</h5>
-                    <img src="images/Rectangle 8.png" alt="">
-                </div>
-                <div  class="kasmir imaegec">
-                    <h5>Kashmir</h5>
-                    <img src="images/Rectangle 9.png" alt="">
-                </div>
-                <div class="bd imaegec">
-                    <h5>Bangladesh</h5>
-                    <img src="images/Rectangle 10.png" alt="">
-                </div>
-                <div class="bandarban imaegec">
-                    <h5>Bandarban</h5>
-                    <img src="images/Rectangle 11.png" alt="">
-                </div>
-            </div>
-        </section> -->
         <section id="iteam" class="nav_banner-container">
             <div class="iteam-grid">
                 <h1>Best Destination</h1>
@@ -287,11 +251,49 @@
             </div>
         </section>
         <!-- perfact place section end -->
+        <!-- News Latter Section start -->
+        <section class="nav_banner-container">
+            <div class="newsletter">
+                <div class="form">
+                    <h3>Newsletter</h3>
+                    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <input placeholder="Enter Your Name" type="text" id="newsform">
+                    <input placeholder="Enter Your Email" type="email" name="" id="newsform">
+                    <button class="form-btn">
+                        <a href="">Subscribe</a>
+                    </button>
+                </div>
+                <div class="travel-photo">
+                    <img src="./images/Rectangle 8 (1).png" alt="">
+                    <div class="travel-discount">
+                        <p>green travel.com</p>
+                        <h2>Save up to 70%</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- News Latter Section end -->
+        
 
     </main>
     <!-- footer section start -->
     <footer>
-
+        <section class="nav_banner-container">
+            <div class="footer-text">
+                <div class="footer-title">
+                    <img src="./images/logo.png" alt="">
+                    <h2>Green<span class="footer-sp"> Travel</span></h2>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+                <div class="fa-icon">
+                    <p><i class="fa-brands fa-twitter"></i></p>
+                    <p><i class="fa-brands fa-facebook-f"></i></p>
+                    <p><i class="fa-brands fa-instagram"></i></p>
+                    <p><i class="fa-brands fa-github"></i></p>
+                </div>
+            </div>
+            <p class="footer-copy">2017, All Rights Reserved.</p>
+        </section>
     </footer>
 </body>
 
