--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li class="option"><a href="">Testimonial</a></li>
                         <li class="option"><a href="">Blog</a></li>
                         <li class="option"><a href="">Contact</a></li>
-                        <li><a href="nav_option"><i class="fa-solid fa-bars"></i></a></li>
+                        <li class="nav-option"><a href=""><i class="fa-solid fa-bars"></i></a></li>
                     </ul>
                 </div>
             </nav>
@@ -97,7 +97,7 @@
             <div class="iteam-grid">
                 <h1>Best Destination</h1>
                 <p>.Our travel guides as well as our photos should help you find your next destination.You can find more
-                    details at the Moon Travel Angency.</p>
+                    details at the Green Travel Angency.</p>
             </div>
             <div class="image-area">
                 <div id="immages" class="maldiv">
