--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main>
         <section class="popularTours-container">
             <div class="popularTours">
-                <div class="tours-text">
+                <div class="tours_text">
                     <h1>Our Popular Tours</h1>
                     <p> We prioritize safety and comfort, providing a secure and enjoyable environment throughout your
                         tour.
@@ -83,7 +83,7 @@
                     <p>Although the Sun appears to “rise” from the horizon, it is actually the Earth’s motion that
                         causes
                         the Sun to appear. The illusion of a moving Sun results from Earth observers being....</p>
-                    <button class="pm_button">
+                    <button class="pm_button button_pT">
                         <a href=""> Read More</a>
                     </button>
                 </div>
