update some code

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
     <!-- main section start -->
     <main>
-        <section class="popularTours-container">
+        <section class="popularTours-container nav_banner-container">
             <div class="popularTours">
                 <div class="tours_text">
                     <h1>Our Popular Tours</h1>
