--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
 
 <body>
@@ -80,7 +79,7 @@
                         <li type="square">Cox's Bazar Green with Travel. Pristine beaches, vibrant culture, and
                             unforgettable experiences await.</li>
                     </ul>
-                    <p>Although the Sun appears to “rise” from the horizon, it is actually the Earth’s motion that
+                    <p>Although the Sun appears to “rise” from the horizon, it is actually the Earths motion that
                         causes
                         the Sun to appear. The illusion of a moving Sun results from Earth observers being....</p>
                     <button class="pm_button button_pT">
@@ -162,7 +161,7 @@
         </section>
         <!-- whhy choose us section end -->
         <!-- Deals & Discounts section start -->
-        <section id="deals-id" class="nav_banner-container">
+        <section class="nav_banner-container">
             <div class="deals_text">
                 <h1>Deals & Discounts</h1>
                 <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales
@@ -229,8 +228,8 @@
         <!-- perfact place section start -->
 
         <section class="nav_banner-container">
-            <div class="perfact-pace">
-                <div class="perfact-text">
+            <div class="perfact_pace">
+                <div class="perfact_text">
                     <h1>A Simple Perfect Place To Get Lost</h1>
                     <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
                         sagittis dignissim adipiscing quis. </p>
@@ -240,11 +239,11 @@
                         <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
                             suspendisse nullam.</li>
                     </ul>
-                    <button id="deals-btn" class="pm_button">
+                    <button class="pm_button">
                         <a href="">See More</a>
                     </button>
                 </div>
-                <div class="main-video">
+                <div class="main_video">
                     <video class="video" controls src="Images/video.mp4"></video>
                     <h3 class="mountain">Watch Our Mountain in <br> Bangladesh</h3>
                 </div>
@@ -259,13 +258,14 @@
                     <p>Get your daily dose of travel news & tips. Sign up today!</p>
                     <input placeholder="Enter Your Name" type="text" id="newsform">
                     <input placeholder="Enter Your Email" type="email" name="" id="newsform">
-                    <button class="form-btn">
+                    <button class="form_btn">
                         <a href="">Subscribe</a>
                     </button>
                 </div>
-                <div class="travel-photo">
+                <div class="travel_photo">
                     <img src="./images/Rectangle 8 (1).png" alt="">
-                    <div class="travel-discount">
+
+                    <div class="travel_discount">
                         <p>green travel.com</p>
                         <h2>Save up to 70%</h2>
                     </div>
@@ -284,7 +284,7 @@
                     <img src="./images/logo.png" alt="">
                     <h2>Green<span class="footer-sp"> Travel</span></h2>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+                <p>Booking.com is part of Booking Holdings Inc. The world leader in online travel and related services. </p>
                 <div class="fa-icon">
                     <p><i class="fa-brands fa-twitter"></i></p>
                     <p><i class="fa-brands fa-facebook-f"></i></p>
